{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 19,
  "lineage": "6e80b394-b6c4-38cf-b4d1-912d44011c09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0533232143375644f",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-198-37-0.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.37.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07088c089b65bc481",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-123-74-242.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.74.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:206493857144:internet-gateway/igw-0d202789d0266782a",
            "id": "igw-0d202789d0266782a",
            "owner_id": "206493857144",
            "tags": {
              "application": "test",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0533232143375644f",
            "id": "nat-02199f0d420b4a53a",
            "network_interface_id": "eni-0c013f57d7f6e3a0f",
            "private_ip": "172.124.1.250",
            "public_ip": "18.198.37.0",
            "subnet_id": "subnet-061c415e76d702eb7"
          },
          "dependencies": [
            "aws_eip.ip1",
            "aws_subnet.public1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07088c089b65bc481",
            "id": "nat-091c78fa77b15780e",
            "network_interface_id": "eni-0bcfd2ed032302115",
            "private_ip": "172.124.2.37",
            "public_ip": "3.123.74.242",
            "subnet_id": "subnet-0da282109eb1c16ec"
          },
          "dependencies": [
            "aws_eip.ip2",
            "aws_subnet.public2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_gateway_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010d1891085531188",
            "owner_id": "206493857144",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d202789d0266782a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01d875bfd476a5de2",
            "owner_id": "206493857144",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02199f0d420b4a53a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_eip.ip1",
            "aws_nat_gateway.gw1",
            "aws_subnet.public1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0de8852da053a65bc",
            "owner_id": "206493857144",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-091c78fa77b15780e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_eip.ip2",
            "aws_nat_gateway.gw2",
            "aws_subnet.public2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb4dd636c0b669e0",
            "route_table_id": "rtb-010d1891085531188",
            "subnet_id": "subnet-061c415e76d702eb7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet_gateway_route",
            "aws_subnet.public1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076f6835fbcfb111f",
            "route_table_id": "rtb-010d1891085531188",
            "subnet_id": "subnet-0da282109eb1c16ec"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.internet_gateway_route",
            "aws_subnet.public2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ng_association_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c33cda42960940d1",
            "route_table_id": "rtb-01d875bfd476a5de2",
            "subnet_id": "subnet-03baf08a148a2b46b"
          },
          "dependencies": [
            "aws_eip.ip1",
            "aws_nat_gateway.gw1",
            "aws_route_table.nat1",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ng_association_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e01f693b3a0db5b6",
            "route_table_id": "rtb-0de8852da053a65bc",
            "subnet_id": "subnet-0d818970d09a6fff3"
          },
          "dependencies": [
            "aws_eip.ip2",
            "aws_nat_gateway.gw2",
            "aws_route_table.nat2",
            "aws_subnet.private2",
            "aws_subnet.public2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:206493857144:subnet/subnet-03baf08a148a2b46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.124.5.0/24",
            "id": "subnet-03baf08a148a2b46b",
            "map_public_ip_on_launch": false,
            "owner_id": "206493857144",
            "tags": {
              "application": "test",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:206493857144:subnet/subnet-0d818970d09a6fff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.124.6.0/24",
            "id": "subnet-0d818970d09a6fff3",
            "map_public_ip_on_launch": false,
            "owner_id": "206493857144",
            "tags": {
              "application": "test",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:206493857144:subnet/subnet-061c415e76d702eb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.124.1.0/24",
            "id": "subnet-061c415e76d702eb7",
            "map_public_ip_on_launch": false,
            "owner_id": "206493857144",
            "tags": {
              "application": "test",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:206493857144:subnet/subnet-0da282109eb1c16ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.124.2.0/24",
            "id": "subnet-0da282109eb1c16ec",
            "map_public_ip_on_launch": false,
            "owner_id": "206493857144",
            "tags": {
              "application": "test",
              "environment": "dev"
            },
            "vpc_id": "vpc-0a2045882d48f2861"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:206493857144:vpc/vpc-0a2045882d48f2861",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.124.0.0/16",
            "default_network_acl_id": "acl-055aa13caa0d6b416",
            "default_route_table_id": "rtb-07228e42ae9a892c4",
            "default_security_group_id": "sg-0e9914a7a5ecfddb8",
            "dhcp_options_id": "dopt-aaae59c1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a2045882d48f2861",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07228e42ae9a892c4",
            "owner_id": "206493857144",
            "tags": {
              "application": "test",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}